--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -91,5 +91,7 @@ required = [
   name = "github.com/3scale/3scale-porta-go-client"
   branch = "master"
 
-
+[[override]]
+  name = "github.com/ss75710541/3scale-operator"
+  revision = "v0.2.0.2"
 
